reworked logic to create stand
